Fix references alignment

--- a/print.css
+++ b/print.css
@@ -155,6 +155,10 @@ h2, h3, h4, h5, h6 {
     line-height: 1.2;
 }
 
+#content > div:last-child p {
+    text-align: left;
+}
+
 span.footnote {
     font-size: .7em;
     line-height: 0;
